<resources>
    <string name="app_name">ShoppingList</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_product_button_text">+</string>

    <string name="remove_button_text">Remove item</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="add_product_button_text">Add Product</string>
    <string name="product_name_placeholder">Enter product name</string>
    <string name="product_list_header">Products</string>
    <string name="product_name">Product Name</string>
    <string name="checked_button_text">Check</string>
    <string name="delete_product_button_text">Delete</string>
    <string name="delete_dialog_text">Delete product?</string>
    <string name="cancel">Cancel</string>
    <string name="add_product_dialog_title">Add Product</string>
    <string name="add_product_dialog_message">Add a new product to list</string>
    <string name="add_product_dialog_add_button_text">New Button</string>
    <string name="add_product_dialog_cancel_button_text">Cancel</string>
    <string name="delete_list">Delete List</string>


</resources>
