<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AddProductDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="horizontal">

    <ImageView
        android:id="@+id/addProductDialogImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:src="@drawable/ic_database_plus_black_24dp" />

    <TextView
        android:id="@+id/AddProductDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="32dp"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:text="@string/add_product_dialog_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userInput"
        android:paddingLeft="24dp"
        android:layout_below="@+id/AddProductDialogTitle"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/addProductDialogImage"
        android:width="200dp"
        style="@style/AppTheme.Base"
        android:hint="@string/product_name_placeholder"
        android:singleLine="true" />


    <RelativeLayout
        android:id="@+id/AddProductButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AddProductDialogTitle"
        android:layout_alignStart="@+id/AddProductDialogTitle"
        android:layout_below="@+id/userInput"
        android:paddingTop="8dp"
        >

        <Button
            android:id="@+id/AddProductDialogCancelButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product_dialog_cancel_button_text"
            android:textColor="@color/primaryColor"
            android:layout_alignParentTop="true"

            android:layout_toLeftOf="@+id/AddProductDialogAddButton"
            android:layout_toStartOf="@+id/AddProductDialogAddButton" />

        <Button
            android:id="@+id/AddProductDialogAddButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:text="Add"
            android:textColor="@color/primaryColor" />


    </RelativeLayout>
</RelativeLayout>